update transactions api
