# ms-go-gin/docs/swagger.json
@@ -1,13 +1,8 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a documentation for the backend test concreteAi.",
-        "title": "Backend Test ConcreteAi",
-        "contact": {},
-        "version": "1.0"
+        "contact": {}
     },
-    "host": "localhost:8080",
-    "basePath": "/",
     "paths": {
         "/api/v1/account": {
             "get": {
@@ -230,6 +225,163 @@
                     }
                 }
             }
+        },
+        "/api/v1/transactions/send": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Transactions Send money from account",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "transactions"
+                ],
+                "summary": "Send",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "Transactions Send Request Body",
+                        "name": "sendRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/domain.TrxRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "transactions success",
+                        "schema": {
+                            "$ref": "#/definitions/domain.TrxRequest"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/transactions/withdrawal": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Withdraw money from account",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "transactions"
+                ],
+                "summary": "Withdrawal",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "Withdrawal Send Request Body",
+                        "name": "trxRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/domain.TrxRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "transactions success",
+                        "schema": {
+                            "$ref": "#/definitions/domain.TrxRequest"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/transactions/{account_id}": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Get all transactions for an account",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "transactions"
+                ],
+                "summary": "Get all transactions for an account",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Account ID",
+                        "name": "account_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "get list transactions",
+                        "schema": {
+                            "$ref": "#/definitions/domain.TrxRequest"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -248,6 +400,9 @@
         },
         "domain.PaymentAccountRequest": {
             "type": "object",
+            "required": [
+                "accountNumber"
+            ],
             "properties": {
                 "accountNumber": {
                     "type": "string",
@@ -286,6 +441,27 @@
                 "message": {
                     "type": "string",
                     "example": "success"
+                }
+            }
+        },
+        "domain.TrxRequest": {
+            "type": "object",
+            "required": [
+                "accountNumber",
+                "to_address"
+            ],
+            "properties": {
+                "accountNumber": {
+                    "type": "string",
+                    "example": "2777625252525252"
+                },
+                "amount": {
+                    "type": "string",
+                    "example": "5"
+                },
+                "to_address": {
+                    "type": "string",
+                    "example": "2777625252525252"
                 }
             }
         }
